package com.dutianze.designpattern.others.throttling.timer;

/**
 * @author dutianze
 * @date 2022/8/22
 */
public interface Throttler {

    void start();
}
